# star_trader_game

./: .gitignore  Cargo.toml  FEATURE_LIST.txt  README  README.md  package-lock.json
data/quotes/trader/: TraderDangerHello.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  constants.ts  index.css
frontend/src/components/: CanvasBackground.css  CanvasBackground.tsx  CombatModal.css  CombatModal.tsx  EncounterModal.css  EncounterModal.tsx  FleetDetails.css  FleetDetailsModal.css  FleetDetailsModal.tsx  FleetList.css  FleetList.tsx  FleetModal.css  FleetModal.tsx  GalaxyMap.css  GalaxyMap.tsx  MainMenu.css  MainMenu.tsx  Market.tsx  MarketModal.css  MarketModal.tsx  ShipMarketModal.css  ShipMarketModal.tsx  StarBackground.css  StarBackground.jsx  StarBackground.tsx  StarSystemModal.css  StarSystemModal.tsx  TabBar.css  TabBar.tsx  (+2 more)
src/: App.tsx  constants.rs  encounters.rs  game_state.rs  game_world.rs  lib.rs  main.rs  mod.rs  routes.rs  types.ts
src/combat/: combat.rs
src/components/: Market.tsx
src/engine/: game_world.rs
src/models/: economy.rs  faction.rs  fleet.rs  galaxy.rs  game_state.rs  game_world.rs  market.rs  mod.rs  planet.rs  player.rs  position.rs  resource.rs  response.rs  settings.rs  star.rs  star_system.rs  trade.rs  trader.rs
src/routes/: trade.rs
src/styles/: ship-market.css  star-system-modal.css
src/templates/: 500.html.tera
src/tests/: test_fleet_movement.rs  test_position.rs
static/css/: styles.css
static/js/: fleet.js  main.js
templates/: index.html.tera
(+9 files in other folders)
