[package]
name = "star_trader_game"
version = "0.1.1"
edition = "2024"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.8.5"
thiserror = "1.0.40"
strum = "0.24.0"
strum_macros = "0.24.0"
lazy_static = "1.4.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }

rocket_dyn_templates = {version = "0.2.0", features = ["tera"]}

rocket_cors = "0.6.0"

chrono = { version = "0.4", features = ["serde"] }
cached = "0.55.1"
